# AnotherRayTracer

./: .gitignore  .projections.json  CMakeLists.txt  Doxyfile  README.md  conanfile.py  meson.build  meson_options.txt
.github/workflows/: conan.yml  system-packages.yml
cmake/: FindImGui.cmake  art_fetch_dependencies.cmake
include/art/: Camera.hpp  Image.hpp  Intersection.hpp  Point.hpp  Point.hxx  Rational.hpp  Rational.hxx  Ray.hpp  camera.hpp  eigen_types.hpp  export.hpp  intersection.hpp  line.hpp  point.hpp  rational.hpp  types.hpp  zipper_types.hpp
include/art/accel/: BVHAccelerator.hpp  LinearAccelerator.hpp  SceneAccelerator.hpp  ScenePrimitive.hpp  intersect_primitive.hpp
include/art/geometry/: BoundingBox.hpp  Box.hpp  Cylinder.hpp  Disk.hpp  Geometry.hpp  Line.hpp  MeshGeometry.hpp  Plane.hpp  Ray.hpp  Sphere.hpp  Triangle.hpp  TriangleMesh.hpp  bounding_box.hpp  mesh_utils.hpp  ray.hpp
include/art/internal/: common.hpp
include/art/io/: image_io.hpp
include/art/lua/: bindings.hpp  scene_loader.hpp  scene_serializer.hpp
include/art/objects/: InternalSceneNode.hpp  Object.hpp  SceneNode.hpp  Sphere.hpp  object.hpp  scene_node.hpp  sphere.hpp
include/art/utils/: AffineTransform.hpp
scenes/: cornell_box.lua  mesh_demo.lua  sphere.lua  transforms.lua
src/: Camera.cpp  Image.cpp  Point.cpp  Rational.cpp  Ray.cpp  art_lua.cpp  camera.cpp  line.cpp  main.cpp  point.cpp  rational.cpp  rendergui.cpp
src/accel/: BVHAccelerator.cpp  LinearAccelerator.cpp  SceneAccelerator.cpp  intersect_primitive.cpp
src/geometry/: BoundingBox.cpp  Box.cpp  Cylinder.cpp  Disk.cpp  Line.cpp  MeshGeometry.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Triangle.cpp  TriangleMesh.cpp  bounding_box.cpp  mesh_utils.cpp  ray.cpp
src/io/: exr.cpp  image_io.cpp  png.cpp  ppm.cpp
src/lua/: bind_camera.cpp  bind_geometry.cpp  bind_image.cpp  bind_internal.hpp  bind_scene.cpp  bind_transform.cpp  bindings.cpp  scene_loader.cpp  scene_serializer.cpp
src/objects/: InternalSceneNode.cpp  Object.cpp  SceneNode.cpp  Sphere.cpp  scene_node.cpp  sphere.cpp
src/utils/: AffineTransform.cpp
subprojects/: .gitignore  balsa.wrap  mdspan.wrap  sol2.wrap  stb.wrap  tinyexr.wrap  zipper.wrap
subprojects/packagefiles/stb/: meson.build
subprojects/packagefiles/tinyexr/: meson.build
tests/: catch_include.hpp  meson.build  test_accelerator.cpp  test_cylinder.cpp  test_disk.cpp  test_image.cpp  test_image_io.cpp  test_intersection.cpp  test_mesh_geometry.cpp  test_plane.cpp  test_point.cpp  test_rational.cpp  test_scene_loader.cpp  test_triangle.cpp
tools/: art_term.cpp  lua_to_pbrt.lua  meson.build  pbrt_to_lua.lua  validate_roundtrip.lua
